@@ -1,6 +1,6 @@
 ===============================================================================
                                                                 freemed project
-                                                     feature set as of 19991101
+                                                   feature set as of 2001-01-25
                                  compiled by jeff b (jeff@univrel.pr.uconn.edu)
 ===============================================================================
 
@@ -9,6 +9,11 @@
   passes parameters in an interoperable way.
 * freemed also has a seperate API for calendaring and scheduling functions,
   including an appointment interference map for minimum SQL server load.
+* freemed has a loadable module API, gained from use of the phpwebtools
+  toolkit, which allows extra functionality to be dropped into the program
+  without having to change any part of the existing code, as is done in
+  dynamic modules for C code. Binary-only modules can be used by freemed, if
+  the Zend Compiler (available at http://www.zend.com/) is used.
 
 ------------------------------------------------------------ COMMUNITY INTEREST
 * we have had over 10,000 hits to our main page since the site gained a web
@@ -37,8 +42,8 @@
 * languages for use are selectable at login -- half your staff can speak
   English, and the other half French, Italian, Spanish, etc, and it is still
   possible to let them work in their native languages.
-* as of 1999 Sep 22, English, French, Spanish/Castellano, Italian and
-  Portuguese are supported by freemed.
+* GNU gettext support is used, allowing drop-in translations for different
+  locales in a standards-based, easy-to-edit format.
 
 ---------------------------------------------------------------- LEARNING CURVE
 * we believe that the learning curve on a "point-and-click" web-based
