@@ -1,0 +1,10 @@
+<?php
+ // $Id$
+ // note: removes prying eyes from image directory
+ // lic : GPL
+
+  include ("../lib/freemed.php"); // include global variables
+
+  Header("Location: $complete_url"); // redirect to real root
+
+?>
