@@ -5,8 +5,6 @@
 
 include "lib/freemed.php";
 include "lib/API.php";
-include "lib/module_emr.php";
-include "lib/module_maintenance.php";
 
 // get list of modules
 $module_list = new module_list (PACKAGENAME);
